--- a/fresh-project/static/styles.css
+++ b/fresh-project/static/styles.css
@@ -6,6 +6,7 @@ body {
   padding: 20px;
 }
 
+
 /* Contenedor de la lista de partidos */
 .matches-container {
   max-width: 800px;
@@ -52,4 +53,40 @@ body {
   font-weight: bold;
   color: yellow;
   text-align: center;
+}
+.homebutton{
+  background-color: #4CAF50;
+  width: 50px;
+
+}
+.sesion{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  height: 50px;
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
+  border-radius: 12px;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.2s, box-shadow 0.2s;
+  cursor: pointer;
+  border: none;
+  text-align: center;
+}
+
+.button:hover {
+  transform: scale(1.05);
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.button:active {
+  transform: scale(0.95);
 }
